--- a/Frontend/src/components/home/Home.css
+++ b/Frontend/src/components/home/Home.css
@@ -16,20 +16,97 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .restaurant {
-    width: 80%;
-    display: flex;
-    align-items: center;
-    border: 3px white solid;
-    margin-top: 15px;
-    border-radius: 5px;
-    justify-content: space-evenly;
+  width: 80%;
+  align-items: center;
+  border: 3px white solid;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  justify-content: space-evenly;
+  display: grid; 
+  grid-auto-columns: 1fr; 
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr; 
+  grid-template-rows: 1fr 0.8fr 0.5fr; 
+  gap: 0px 0px;
+  grid-template-areas: 
+    "image-grid image-grid title-grid title-grid title-grid"
+    "image-grid image-grid info-grid info-grid info-grid"
+    "image-grid image-grid button-grid button-grid button-grid"; 
 }
 
-.img-restaurant {
-    width: 400px;
-    height: 300px;
-    align-self: flex-start;
+.restaurant > :not(.image-grid) {
+  height: 100%;
+  padding: 15px 25px;
+}
+
+.image-grid { 
+  grid-area: image-grid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 294px;
+  max-width: 100%;
+  background-color: black;
+  overflow: hidden;
+  border-right: 2px white solid;
+}
+
+.title-grid { 
+  grid-area: title-grid; 
+}
+
+.title {
+  text-align: left;
+  font-size: 35px;
+  font-weight: 600;
+}
+
+.subtitle {
+  color:#98adcf;
+}
+
+.info-grid { 
+  grid-area: info-grid;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
+.info-grid p {
+  display: inline;
+}
+
+.img-location {
+  height: 30px;
+  display: inline;
+}
+
+.button-grid { 
+  grid-area: button-grid;
+  margin: auto; 
+  height: 100%;
+  max-height: 100%;
+}
+
+p {
+  font-family: 'Roboto';
+  font-size: 20px;
+}
+
+.button-grid {
+  color:#2d3748;
+  font-weight: 600;
+  
+  width: 100%;
+  height: 100%;
+  background-color: #4A98F7;
+  border: 1px solid #4A98F7;
+}
+
+.button-grid:hover {
+  font-weight: 800;
+  font-size: 110%;
 }
