--- a/Frontend/src/components/menu/Menu.css
+++ b/Frontend/src/components/menu/Menu.css
@@ -10,6 +10,24 @@
     left: 10px;
 }
 
+.hidden {
+    display: none;
+}
+
+.box-crear-pedido {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.cantidad {
+    align-self: center;
+}
+
+.btn {
+    font-size: 30px;
+    font-weight: 500;
+}
+
 .title_menu {
     width: 100vw;
     text-align: center;
