--- a/Frontend/src/components/menu/Menu.css
+++ b/Frontend/src/components/menu/Menu.css
@@ -10,10 +10,6 @@
     left: 10px;
 }
 
-.hidden {
-    display: none;
-}
-
 .box-crear-pedido {
     display: flex;
     justify-content: space-evenly;
@@ -22,7 +18,7 @@
 .cantidad {
     align-self: center;
 }
-
+/*
 .btn {
     font-size: 30px;
     font-weight: 500;
@@ -35,6 +31,7 @@
     font-weight: 600;
     padding: 15px;
 }
+*/
 .products {
     margin-bottom: 30px;
     display: flex;
