--- a/Frontend/src/theme.css
+++ b/Frontend/src/theme.css
@@ -11,12 +11,16 @@
   /* Colores de letras */
   --font-primary: #4A98F7;
   --font-secondary: #c6cdd5;
+  --font-third: #98adcf;
 }
 
 * {
   margin: 0;
   font-family: 'roboto';
+  box-sizing: border-box;
 }
+
+/* Elementos HTML */
 
 header {
   margin-bottom: 10px;
@@ -27,13 +31,46 @@ body {
 }
 
 h1 {
-  color: var(--font-primary)
+  color: var(--font-primary);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 2.2rem;
 }
 
 h2 {
-  color: var(--font-primary)
+  color: var(--font-primary);
+  padding: 15px 10px;
+  font-size: 1.8rem;
 }
 
 p {
   color: var(--font-secondary)
+}
+
+button {
+  cursor: pointer;
+  background-color: var(--font-primary);
+  border: 1px solid var(--font-primary);
+  color:var(--background-ligt);
+}
+
+main {
+  width: 100vw;
+}
+
+/* Clases especiales */
+
+.hidden {
+  display: none;
+}
+
+.subtitle {
+  color:var(--font-third);
+}
+
+.flex {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
