--- a/Frontend/src/components/menu/modal-crear-pedido/ModalCrearPedido.css
+++ b/Frontend/src/components/menu/modal-crear-pedido/ModalCrearPedido.css
@@ -1,16 +1,12 @@
 .modal-content {
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5); /* Sombra del modal */
-    width: 95vw;
-    height: 95vh;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     overflow-y: auto;
     border-radius: 5px;
     padding: 20px;
 }
 
-.confirmar {
-    cursor: pointer;
-    color: #007bff;
-    font-weight: bold;
+.modal-content > input {
+    margin-right: 8px;
 }
