--- a/Frontend/src/theme.css
+++ b/Frontend/src/theme.css
@@ -90,13 +90,13 @@ main {
   background-color: var(--background-ligt);
 }
 
-.modal-container {
+.modal-background {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro semitransparente */
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
