--- a/Frontend/src/components/home/display-restaurant/DisplayRestaurant.css
+++ b/Frontend/src/components/home/display-restaurant/DisplayRestaurant.css
@@ -1,13 +1,19 @@
-
+body {
+  background: url('file:///C:/Users/lusca/Downloads/222b6fa8366ea0b9895595e3eb30bb88.jpg') center/cover repeat;
+  margin: 0; /* Elimina el margen predeterminado del cuerpo */
+  height: 100vh; /* Ajusta la altura del cuerpo al 100% del viewport */
+}
 .display-restaurant {
-    width: 80%;
+    width: 50%;
     border: 3px white solid;
     border-radius: 5px;
     margin-bottom: 15px;
     display: grid;
     grid-auto-columns: 1fr; 
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr; 
-    grid-template-rows: 1fr 0.8fr 0.5fr; 
+    grid-template-rows: 1fr 0.8fr 0.5fr;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 20px;
     gap: 0px 0px;
     grid-template-areas: 
       "image-grid image-grid title-grid title-grid title-grid"
@@ -33,7 +39,8 @@
   }
   
   .display-restaurant-title-grid { 
-    grid-area: title-grid; 
+    grid-area: title-grid;
+    text-align: center;
   }
   
   .display-restaurant-info-grid { 
@@ -61,7 +68,7 @@
   
   .display-restaurant-button-grid {
     font-weight: 600;
-    width: 100%;
+    width: 30%;
     height: 100%;
   }
   
@@ -72,6 +79,8 @@
   
   .display-restaurant-img {
     height: 100%;
+    width: 100%;
+    object-fit: cover;
   }
 
   .display-restaurant-subtitle {
@@ -79,6 +88,8 @@
   }
 
   .display-restaurant-location {
-    padding-bottom: 10px;
+    padding-top: 0px;
+    padding-bottom: 50px;
     padding-left: 5px;
+    text-align: center;
   }
