--- a/Frontend/src/components/home/display-restaurant/DisplayRestaurant.css
+++ b/Frontend/src/components/home/display-restaurant/DisplayRestaurant.css
@@ -1,7 +1,7 @@
 body {
   background: url('file:///C:/Users/lusca/Downloads/222b6fa8366ea0b9895595e3eb30bb88.jpg') center/cover repeat;
-  margin: 0; /* Elimina el margen predeterminado del cuerpo */
-  height: 100vh; /* Ajusta la altura del cuerpo al 100% del viewport */
+  margin: 0;
+  height: 100vh;
 }
 .display-restaurant {
     width: 50%;
@@ -20,6 +20,14 @@ body {
       "image-grid image-grid info-grid info-grid info-grid"
       "image-grid image-grid button-grid button-grid button-grid"; 
   }
+
+.display-restaurant-title{
+  color: black;
+  padding: 15px 10px;
+  font-size: 35px;
+  font-weight: bolder;
+  font-family: "Baskerville Old Face";
+}
   
   .display-restaurant-restaurant > :not(.display-restaurant-image-grid) {
     height: 100%;
@@ -57,6 +65,7 @@ body {
   .display-restaurant-img-location {
     height: 30px;
     display: inline;
+    vertical-align: bottom;
   }
   
   .display-restaurant-button-grid { 
@@ -64,6 +73,7 @@ body {
     margin: auto; 
     height: 100%;
     max-height: 100%;
+    font-size: 17px;
   }
   
   .display-restaurant-button-grid {
