--- a/Frontend/src/components/menu/modal-crear-pedido/ModalCrearPedido.css
+++ b/Frontend/src/components/menu/modal-crear-pedido/ModalCrearPedido.css
@@ -3,8 +3,7 @@
     border-radius: 8px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     overflow-y: auto;
-    border-radius: 5px;
-    padding: 20px;
+    justify-content: center;
 }
 
 .modal-content > input {
