--- a/Frontend/src/components/menu/product-display/ProductDisplay.css
+++ b/Frontend/src/components/menu/product-display/ProductDisplay.css
@@ -3,9 +3,10 @@
     grid-template-columns: 1fr; 
     grid-template-rows: 0.3fr 0.6fr auto 1fr;
     margin: 10px;
-    width: 28vw;
+    width: 20vw;
     border: 3px white solid;
     border-radius: 5px;
+    background-color: antiquewhite;
     grid-template-areas: 
       "grid-title"
       "grid-img"
@@ -23,13 +24,15 @@
 
 .product-display-grid-img { 
     grid-area: grid-img;
-    max-width: 28vw;
-    height: 150px;
     background-color: black;
     overflow: hidden;
     display: flex;
     justify-content: center;
     border-bottom: 2px white solid;
+    align-items: center;
+    height: 200px;
+    max-width: 100%;
+    border-right: 2px white solid;
 }
 
 .product-display-amount-container {
@@ -37,7 +40,8 @@
     display: flex;
     justify-content: space-evenly;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 20px;
+    font-size: 20px;
 }
 
 .product-display-grid-img > img {
@@ -55,6 +59,8 @@
     flex-direction: column;
     border-bottom: 2px white solid;
     height: 100%;
+    text-align: center;
+    font-size: 20px;
 }
 
 .product-display-description { 
