terminado el style

--- a/Frontend/src/components/menu/modal-ver-detalles/clientDetails/detalleProducto/DetalleProducto.css
+++ b/Frontend/src/components/menu/modal-ver-detalles/clientDetails/detalleProducto/DetalleProducto.css
@@ -1,5 +1,11 @@
 .detalle-producto {
     display: flex;
+    align-items: center;
+}
+
+.detalle-texto {
+    margin-left: 10px;
+    font-size: 20px;
 }
 
 .detalle-producto > img {
