--- a/Frontend/src/theme.css
+++ b/Frontend/src/theme.css
@@ -47,7 +47,7 @@ h1 {
 }
 
 h2 {
-  color: black;
+  color: white;
   padding: 15px 10px;
   font-size: 35px;
   font-weight: normal;
@@ -62,11 +62,17 @@ p {
 button {
   cursor: pointer;
   background-color: black;
-  border: 1px solid dimgrey;
   color:white;
   padding: 10px;
   font-weight: 600;
   border-radius: 5px;
+  height: 50px;
+  width: 20%;
+  font-size: 18px;
+  border-width: 2px ;
+  border-color: white;
+  margin-left: 1.5%;
+  margin-right: 1.5%;
 }
 
 /* Clases especiales */
@@ -91,7 +97,7 @@ button {
 }
 
 .bg {
-  background-color: antiquewhite;
+  background-color: gray;
 }
 
 .modal-background {
@@ -115,12 +121,22 @@ button {
   position: absolute;
   top: 15px;
   left: 10px;
+  height: 7%;
+  width: 10%;
+  font-size: 18px;
+  border-width: 2px ;
+  border-color: white;
 }
 
 .finalizar-btn {
   position: absolute;
   top: 15px;
   right: 20px;
+  height: 7%;
+  width: 10%;
+  font-size: 18px;
+  border-width: 2px ;
+  border-color: white;
 }
 
 .center {
