fix imagen del body

--- a/Frontend/src/components/home/display-restaurant/DisplayRestaurant.css
+++ b/Frontend/src/components/home/display-restaurant/DisplayRestaurant.css
@@ -1,5 +1,5 @@
 body {
-  background: url('file:///C:/Users/lusca/Downloads/222b6fa8366ea0b9895595e3eb30bb88.jpg') center/cover repeat;
+  background: url('../../../images/222b6fa8366ea0b9895595e3eb30bb88.jpg') center/cover repeat;
   margin: 0;
   height: 100vh;
 }
